fix gap active menu indicator

--- a/themes/ESGI-theme/src/css/components/_header.scss
+++ b/themes/ESGI-theme/src/css/components/_header.scss
@@ -288,7 +288,7 @@ $menu-gradient-start: #FFD0A8;
 							&::after {
 								content: '';
 								position: absolute;
-								bottom: 0;
+								bottom: 8px;
 								left: 0;
 								width: 100%;
 								height: 3.9px;
