--- a/themes/ESGI-theme/style.css
+++ b/themes/ESGI-theme/style.css
@@ -4948,7 +4948,7 @@ section:last-child {
 .site-header .mobile-navigation .mobile-nav-menu .mobile-menu-list li.current-menu-item a::after, .site-header .mobile-navigation .mobile-nav-menu .mobile-menu-list li.current_page_parent a::after, .site-header .mobile-navigation .mobile-nav-menu .mobile-menu-list li.current_page_item a::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: 8px;
   left: 0;
   width: 100%;
   height: 3.9px;
